# Feur

./: .gitignore  Dockerfile  LICENSE  README.md  answers.json  compose.yaml  pyproject.toml  setup.py
.github/workflows/: docker.yml  release.yml
feur/: __init__.py  answers.json  command_line.py
feurbot/: __init__.py  command_line.py
src/feur/: __init__.py  app.py
src/feur/bot/: __init__.py  feur.py  module.py
src/feur/bot/cogs/: __init__.py
src/feur/bot/cogs/listeners/: __init__.py  message.py  ready.py
src/feur/bot/services/: __init__.py  bot.py  message.py
src/feur/bot/services/answers/: __init__.py  service.py
src/feur/configuration/: configuration.py  module.py
